# rust-redis-stream

./: Cargo.toml
src/: main.py  main.rs
